Enable native access on jbang to avoid warnings.